// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-jsx-pragmatic existing-imports 1`] = `
"// inserted import has to go AFTER polyfills
import 'react-app-polyfill/ie11'
import 'react-app-polyfill/stable'

import React from 'react'
import { createRoot } from 'react-dom/client'
import App from './App'

createRoot(document.getElementById('root')).render(<App />)


      ↓ ↓ ↓ ↓ ↓ ↓

// inserted import has to go AFTER polyfills
import 'react-app-polyfill/ie11';
import 'react-app-polyfill/stable';
import React from 'react';
import { createRoot } from 'react-dom/client';
import App from './App';
import { jsx as ___EmotionJSX } from "@emotion/react";
createRoot(document.getElementById('root')).render(<App />);"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic fragment-only 1`] = `
"import * as React from 'react'

const F = () => <></>


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';
import { jsx as ___EmotionJSX } from "@emotion/react";

const F = () => <></>;"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic minimal 1`] = `
"import * as React from 'react'

const P = () => <p />


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';
import { jsx as ___EmotionJSX } from "@emotion/react";

const P = () => <p />;"
`;
